# project-guardrails

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
adapters/github/: README.md
adapters/gitlab/: README.md
adapters/pre-commit/: README.md
docs/: architecture.md  bootstrap-flow.md  ci-provisioning.md  config-schema.md  custom-profile-example.md  enforcement-model.md  gitlab-ci.md  install-ownership.md  install.md  llm-operating-contract.md  minimal-init-snapshot.md  output-schema.md  private-source-public-mirror.md  profile-authoring.md  quick-start.md  release-validation.md  repo-layout.md  upgrade-story.md
examples/github/: README.md  guardrails.example.yml
examples/gitlab/: .gitlab-ci.example.yml  .gitlab-ci.source-of-truth.example.yml  README.md
examples/homebrew/: project-guardrails.rb
examples/minimal-init-snapshot/: AGENTS.md  README.md
examples/profiles/: README.md
fixtures/bare-repo/: README.md
fixtures/monorepo/: README.md
fixtures/repo-with-spaces/: README.md
fixtures/rust-repo/: AGENTS.md  README.md
profiles/docs-driven/: profile.toml
profiles/guardrails/: profile.toml
profiles/minimal/: profile.toml
rules/opa/: README.md
rules/semgrep/: README.md
src/: cli.rs  config.rs  diagnostics.rs  enforcement.rs  git.rs  main.rs  managed_block.rs  mcp.rs  output.rs  profile.rs  profile_lock.rs  rule_engine.rs
src/commands/: adapters.rs  brief.rs  check.rs  commit_msg_check.rs  doctor.rs  handoff.rs  init.rs  mcp.rs  mod.rs  pre_commit.rs  pre_work.rs  profiles.rs  refresh.rs  resume.rs  status.rs  tasks.rs  timeline.rs  upgrade.rs
src/operations/: brief.rs  check.rs  (+9 more)
tests/: adapters.rs  bootstrap.rs  mcp_server.rs  output_schema.rs  refresh.rs  starter_rule_packs.rs  task_state.rs
(+37 files in other folders)
