[package]
name = "project-guardrails"
version = "0.1.13"
edition = "2024"
description = "Portable repo-local guardrails bootstrap utility for reviewable project operating baselines"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/firblab-blog/project-guardrails"
homepage = "https://github.com/firblab-blog/project-guardrails"
documentation = "https://github.com/firblab-blog/project-guardrails/tree/main/docs"
keywords = ["cli", "bootstrap", "repo", "guardrails", "templates"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.20"
