[package]
name = "project-guardrails"
version = "0.1.16"
edition = "2024"
description = "Portable repo-local guardrails bootstrap utility for reviewable project operating baselines"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/firblab-blog/project-guardrails"
homepage = "https://github.com/firblab-blog/project-guardrails"
documentation = "https://github.com/firblab-blog/project-guardrails/tree/main/docs"
keywords = ["cli", "bootstrap", "repo", "guardrails", "templates"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
filetime = "0.2"
tempfile = "3.20"
